<resources>
    <string name="app_name">BloodBank</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="NetWorkCheck">Please Check Your NetWork Connection</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="forget_password">forget password</string>
    <string name="don_t_have_an_account">don`t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login now</string>
    <string name="TextRequired">This field is required</string>
    <string name="change_password">change password</string>
    <string name="send_code">send code</string>
    <string name="code">code</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="reset_password">reset password</string>
    <string name="donation">Donation</string>
    <string name="donation_details">Donation details</string>
    <string name="City">city </string>
    <string name="Hospital">Hospital :</string>
    <string name="Patient">Patient :</string>
    <string name="call">call</string>
    <string name="more">more</string>
    <string name="donationCall">donationCall</string>
    <string name="donation_info">donation Info</string>
    <string name="age">age</string>
    <string name="blood_type">blood type</string>
    <string name="patient_name">patient name</string>
    <string name="bugs_number">bugs number</string>
    <string name="hospital_name">hospital name</string>
    <string name="hospital_address">hospital address</string>
    <string name="notes">notes</string>
    <string name="post_image">post_image</string>
    <string name="post">articles</string>
    <string name="image_details">image_details</string>
    <string name="AddedSuccessfully">Added successfully…</string>
    <string name="DeletedSuccessfully">Deleted successfully…</string>
    <string name="account">Account</string>
    <string name="favorite">Favorite</string>
    <string name="report">Report</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="Info">info</string>
    <string name="do_you_really_want_to_delete_all_wish_list">Do you really want to delete all favorite list ?</string>
    <string name="begs_number">begs number</string>
    <string name="add">add donation</string>
    <string name="country">Country</string>
    <string name="ChooseBloodType">Choose Blood Type</string>
    <string name="ChooseGovernorate">Choose Governorate</string>
    <string name="ChooseCity">Choose City</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="last_donation">last Donation</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="facebook_url">facebook url</string>
    <string name="twitter_url">twitter_url</string>
    <string name="youtube_url">youtube url</string>
    <string name="insta_url">insta url</string>
    <string name="whats_url">whats url</string>
    <string name="google_url">google_url</string>
    <string name="notification">notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">update profile</string>
</resources>