<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ContactUsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <ImageButton
            android:id="@+id/iv_facebook"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/facebook_url"
            android:padding="5dp"
            app:srcCompat="@drawable/face" />

        <ImageButton
            android:id="@+id/iv_twitter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/twitter_url"
            android:padding="5dp"
            app:srcCompat="@drawable/twitter" />

        <ImageButton
            android:id="@+id/iv_youtube"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/youtube_url"
            android:padding="5dp"
            app:srcCompat="@drawable/youtube" />

        <ImageButton
            android:id="@+id/iv_insta"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/insta_url"
            android:padding="5dp"
            app:srcCompat="@drawable/insta" />

        <ImageButton
            android:id="@+id/iv_whats"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/whats_url"
            android:padding="5dp"
            app:srcCompat="@drawable/whats" />

        <ImageButton
            android:id="@+id/iv_google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/google_url"
            android:padding="5dp"
            app:srcCompat="@drawable/google" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:background="@color/purple_700"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/contact_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ContactUs_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableEnd="@drawable/ic_title"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ContactUs_Message"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableEnd="@drawable/ic_message"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_ContactUs_Send"
        style="@style/ButtonStyle"
        android:layout_marginTop="24dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>